@@ -3,7 +3,7 @@ Import('env')
 objects = Split('ztest.c #lib/libzpool/libzpool-user.a #lib/libzfscommon/libzfscommon-user.a #lib/libnvpair/libnvpair-user.a #lib/libavl/libavl.a #lib/libumem/libumem.a #lib/libsolcompat/libsolcompat.a')
 cpppath = Split('#lib/libavl/include #lib/libnvpair/include #lib/libumem/include #lib/libzfscommon/include #lib/libzpool/include #lib/libsolcompat/include')
 
-libs = Split('m dl rt pthread z')
+libs = Split('m dl rt pthread z aio')
 
 env.Program('ztest', objects, CPPPATH = env['CPPPATH'] + cpppath, LIBS = libs)
 env.Depends('ztest', '../zdb/zdb')
