@@ -280,6 +280,12 @@ struct zio {
 
 	/* FMA state */
 	uint64_t	io_ena;
+
+	/* Async I/O */
+#ifdef LINUX_AIO
+	struct iocb     io_aio;
+	zio_aio_ctx_t   *io_aio_ctx;
+#endif
 };
 
 extern zio_t *zio_null(zio_t *pio, spa_t *spa,
@@ -379,6 +385,14 @@ extern int zio_inject_list_next(int *id, char *name, size_t buflen,
 extern int zio_clear_fault(int id);
 extern int zio_handle_fault_injection(zio_t *zio, int error);
 extern int zio_handle_device_injection(vdev_t *vd, int error);
+
+/*
+ * Asynchronous I/O
+ */
+#ifdef LINUX_AIO
+extern int zio_aio_init(spa_t *spa);
+extern void zio_aio_fini(spa_t *spa);
+#endif
 
 #ifdef	__cplusplus
 }
